Fix problems with router

--- a/selling-used-items-app-frontend/src/app/app.component.html
+++ b/selling-used-items-app-frontend/src/app/app.component.html
@@ -1,6 +1,1 @@
-
-<router-outlet>
-    <a routerLink="/login" class="cursor-pointer">Login</a>
-    <a routerLink="/register" class="cursor-pointer">Register</a>
-    
-</router-outlet> 
+<router-outlet></router-outlet> 
