--- a/selling-used-items-app-frontend/src/app/login/login.component.html
+++ b/selling-used-items-app-frontend/src/app/login/login.component.html
@@ -24,7 +24,7 @@
     </label>
 
     <div class="container">
-      <span class="psw"><a href="">Forgot password?</a></span>
+      <span class="psw"><a [routerLink]="['/login/forgot-password']">Forgot password?</a></span>
     </div>
   </form>
 </div>
