--- a/selling-used-items-app-frontend/src/app/common/header-bar/header-bar.component.html
+++ b/selling-used-items-app-frontend/src/app/common/header-bar/header-bar.component.html
@@ -9,10 +9,11 @@
             <span class="icon">+</span> Add Advertisement
         </button>
     </div>
-    <button class="logout">
+    <button class="logout" (click)="navigateToLogin()">
         <span class="logoutIcon"></span>
     </button>
     <button class="profile">
         <span class="profileIcon"></span>
     </button>
 </div>
+<app-profile *ngIf="showProfile"></app-profile>
