--- a/selling-used-items-app-frontend/src/app/login/login.component.html
+++ b/selling-used-items-app-frontend/src/app/login/login.component.html
@@ -13,18 +13,18 @@
     </div>
 
     <label for="uname"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="uname" required>
+    <input type="text" placeholder="Enter Email" name="uname">
     <br>
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="psw">
       
-    <button type="submit">Login</button>
+    <button type="button">Login</button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
 
     <div class="container">
-      <span class="psw"><a [routerLink]="['/login/forgot-password']">Forgot password?</a></span>
+      <span class="psw"><a [routerLink]="['/forgot-password']">Forgot password?</a></span>
     </div>
   </form>
 </div>
