--- a/selling-used-items-app-frontend/src/app/common/advertisement-display/advertisement-display.component.css
+++ b/selling-used-items-app-frontend/src/app/common/advertisement-display/advertisement-display.component.css
@@ -6,15 +6,18 @@ body {
 
 .container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center; /* Promenjeno na centriranje */
+    align-items: flex-start; /* Promenjeno na flex-start */
+    flex-direction: column;
     flex-wrap: wrap;
+    width: 100%; /* Puni ekran */
 }
 
 .searchInput,
 .sortContainer,
-.priceRangeContainer {
-    flex: 1;
+.priceRangeContainer,
+.alphabetContainer {
+    width: 100%;
     margin-bottom: 10px;
 }
 
@@ -24,29 +27,38 @@ body {
     border-radius: 5px;
     background-repeat: no-repeat;
     background-position: right 10px center;
-    margin-bottom: 10px; /* Povećavamo margin-bottom */
-    margin-top: 5px; /* Dodajemo margin-top */
+    margin-bottom: 10px;
+    margin-top: 5px;
 }
 
-
-.sortSelect,
-.priceRange {
-    width: 100%;
+.sortSelect {
     padding: 9.5px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
 .priceRange {
-    width: 50%; /* Smanjujemo širinu na 50% */
-    padding: 5px; /* Smanjujemo padding */
+    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    margin-top: 10px;
 }
 
-#priceRangeValue {
-    display: inline-block;
-    margin-left: 10px;
+.priceInput {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 5px;
+    width: 100px;
+}
+
+#applyPrice {
+    padding: 5px 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .advertisementTable {
@@ -68,4 +80,21 @@ body {
 
 .advertisementTable tbody tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+
+.alphabetContainer {
+    display: flex;
+    justify-content: space-between; /* Ravnomerno raspoređivanje elemenata */
+    align-items: center;
+    background-color: #f2f2f2;
+    padding: 10px;
+    border-radius: 5px;
+    width: 99%; /* Puni ekran */
+}
+
+.alphabetFilter {
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
 }
