--- a/selling-used-items-app-frontend/src/app/common/advertisement-display/advertisement-display.component.html
+++ b/selling-used-items-app-frontend/src/app/common/advertisement-display/advertisement-display.component.html
@@ -7,7 +7,36 @@
 <body>
 
 <div class="container">
-    <input type="text" id="searchInput" placeholder="Search..." class="searchInput">
+
+    <div class="alphabetContainer">
+        <div class="alphabetFilter">A</div>
+        <div class="alphabetFilter">B</div>
+        <div class="alphabetFilter">C</div>
+        <div class="alphabetFilter">D</div>
+        <div class="alphabetFilter">E</div>
+        <div class="alphabetFilter">F</div>
+        <div class="alphabetFilter">G</div>
+        <div class="alphabetFilter">H</div>
+        <div class="alphabetFilter">I</div>
+        <div class="alphabetFilter">J</div>
+        <div class="alphabetFilter">K</div>
+        <div class="alphabetFilter">L</div>
+        <div class="alphabetFilter">M</div>
+        <div class="alphabetFilter">N</div>
+        <div class="alphabetFilter">O</div>
+        <div class="alphabetFilter">P</div>
+        <div class="alphabetFilter">Q</div>
+        <div class="alphabetFilter">R</div>
+        <div class="alphabetFilter">S</div>
+        <div class="alphabetFilter">T</div>
+        <div class="alphabetFilter">U</div>
+        <div class="alphabetFilter">V</div>
+        <div class="alphabetFilter">W</div>
+        <div class="alphabetFilter">X</div>
+        <div class="alphabetFilter">Y</div>
+        <div class="alphabetFilter">Z</div>
+    </div>
+
     <div class="sortContainer">
         <select id="priceSort" class="sortSelect">
             <option value="asc">Sort by</option>
@@ -17,29 +46,24 @@
             <option value="desc">Sort by DESC name</option>
         </select>
     </div>
-    <div class="priceRangeContainer">
-        <input type="range" id="priceRange" class="priceRange" min="0" max="1000" step="10" value="0">
-        <span id="priceRangeValue">$0</span>
-    </div>
-  
     <table id="advertisementTable" class="advertisementTable">
         <thead>
             <tr>
-                <th>ID</th>
                 <th>Name</th>
                 <th>Price</th>
+                <th>Description</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>1</td>
                 <td>Advertisement 1</td>
                 <td>$100</td>
+                <td>Nudim polovan automobil</td>
             </tr>
             <tr>
-                <td>2</td>
                 <td>Advertisement 2</td>
                 <td>$200</td>
+                <td>Nudim polovan telefon</td>
             </tr>
         </tbody>
     </table>
