--- a/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.html
+++ b/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.html
@@ -1,1 +1,15 @@
-<p>change-password works!</p>
+<div class="changePasswordForm">
+    <h2>Change Password</h2>
+    <form>
+        <label for="oldPassword">Old Password:</label>
+        <input type="password" id="oldPassword" name="oldPassword" required>
+
+        <label for="newPassword">New Password:</label>
+        <input type="password" id="newPassword" name="newPassword" required>
+
+        <label for="confirmPassword">Confirm New Password:</label>
+        <input type="password" id="confirmPassword" name="confirmPassword" required>
+
+        <input type="submit" value="Submit">
+    </form>
+</div>
