--- a/selling-used-items-app-frontend/src/app/common/header-bar/header-bar.component.html
+++ b/selling-used-items-app-frontend/src/app/common/header-bar/header-bar.component.html
@@ -1,19 +1,26 @@
 <div class="header">
     <img src="./assets/logo1.png" alt="Logo" class="logo">
-    <div class="search" style="position: relative;">
-        <input type="text" id="searchInput" placeholder="Search..." class="searchInput">
-        <span class="searchIcon"></span>
-    </div>
-    <div class="addAdvertisement">
-        <button>
-            <span class="icon">+</span> Add Advertisement
+    <ng-container>
+        <div class="search" style="position: relative;">
+            <input type="text" id="searchInput" placeholder="Search..." class="searchInput">
+            <span class="searchIcon"></span>
+        </div>
+        <div class="addAdvertisement">
+            <button>
+                <span class="icon">+</span> Add Advertisement
+            </button>
+        </div>
+    </ng-container>
+    <ng-template #profileSection>
+        <button class="logout" (click)="navigateToLogin()">
+            <span class="logoutIcon"></span>
         </button>
-    </div>
-    <button class="logout" (click)="navigateToLogin()">
-        <span class="logoutIcon"></span>
-    </button>
-    <button class="profile">
-        <span class="profileIcon"></span>
-    </button>
+        <button class="profile">
+            <span class="profileIcon"></span>
+        </button>
+    </ng-template>
 </div>
-<app-profile *ngIf="showProfile"></app-profile>
+
+<app-profile *ngIf="childComponent === 'ProfileComponent'"></app-profile>
+<app-advertisement-display *ngIf="childComponent === 'AdvertisementDisplayComponent'"></app-advertisement-display>
+<app-change-password *ngIf="childComponent === 'ChangePasswordComponent'"></app-change-password>
