--- a/selling-used-items-app-frontend/src/app/home/home.component.html
+++ b/selling-used-items-app-frontend/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<router-outlet></router-outlet> 
+<div class="header">
+    <img src="./assets/logo1.png" alt="Logo" class="logo">
+    <ng-container>
+        <div class="search" style="position: relative;">
+            <input type="text" id="searchInput" placeholder="Search..." class="searchInput">
+            <span class="searchIcon"></span>
+        </div>
+        <div class="addAdvertisement">
+            <button>
+                <span class="icon">+</span> Add Advertisement
+            </button>
+        </div>
+    </ng-container>
+    <ng-template #profileSection>
+        <button class="logout" (click)="navigateToLogin()">
+            <span class="logoutIcon"></span>
+        </button>
+        <button class="profile">
+            <span class="profileIcon"></span>
+        </button>
+    </ng-template>
+</div>
+<router-outlet></router-outlet>
