Fix some problems

--- a/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.css
+++ b/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.css
@@ -38,3 +38,15 @@
     display: block; /* Da bi se dugme centriralo */
     width: 250px;
 }
+
+.changePasswordForm button {
+    background-color: #04AA6D;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 30px; /* Manja visina, ali dužina ostaje ista */
+    cursor: pointer;
+    margin: 20px auto 0; /* Spuštanje dugmeta nadole za 20px */
+    display: block; /* Da bi se dugme centriralo */
+    width: 250px;
+}
