--- a/selling-used-items-app-frontend/src/app/common/profile/profile.component.html
+++ b/selling-used-items-app-frontend/src/app/common/profile/profile.component.html
@@ -17,7 +17,7 @@
         <input type="text" id="role" name="role" value="Administrator" disabled>
 
         <label for="changePassword">Change password:</label>
-        <input type="password" id="changePassword" name="changePassword">
+        <input type="password" id="changePassword" name="changePassword" (input)=" redirectToChangePassword()" value="****************">
 
         <input type="submit" value="Submit">
     </form>
