--- a/selling-used-items-app-frontend/src/app/home/home.component.css
+++ b/selling-used-items-app-frontend/src/app/home/home.component.css
@@ -46,7 +46,7 @@ body {
     transform: translateY(-50%);
     width: 20px;
     height: 20px;
-
+    background: url('../../assets/loupe.png') no-repeat center;
     background-size: contain;
 }
 
@@ -66,39 +66,44 @@ body {
 
 .logout {
     position: absolute;
-    right: 10px; /* Pomeramo dugme 10 piksela od desne ivice */
+    right: 10px;
     top: 50%;
     transform: translateY(-50%);
     width: 40px;
     height: 23px;
-
+    background: url('../../assets/logout.png') no-repeat center;
     background-size: contain;
-    border: none; /* Uklanjamo ivice dugmeta */
+    border: none; 
     cursor: pointer;
+    padding: 0; /* Remove padding */
+    background-color: transparent; /* Make background transparent */
 }
+
 
 
 .logoutIcon {
     width: 20px; /* Postavljamo širinu ikone na 20 piksela */
     height: 20px; /* Postavljamo visinu ikone na 20 piksela */
-
+    background: url('../../assets/logout.png') no-repeat center;
     background-size: contain;
 }
 
 .profile {
     position: absolute;
-    right: 50px; /* Pomeramo dugme 70 piksela od desne ivice */
+    right: 50px; /* Adjusted position */
     top: 50%;
     transform: translateY(-50%);
     width: 40px;
     height: 25px;
-   
+    background: url('../../assets/profile.png') no-repeat center;
     background-size: contain;
-    border: none; /* Uklanjamo ivice dugmeta */
+    border: none;
     cursor: pointer;
 }
 
 .profileIcon {
-    width: 100%;
-    height: 100%;
+    width: 20px; /* Adjusted width */
+    height: 20px; /* Adjusted height */
+    background-size: contain;
 }
+
