--- a/selling-used-items-app-frontend/src/app/login/login.component.css
+++ b/selling-used-items-app-frontend/src/app/login/login.component.css
@@ -1,20 +1,14 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-}
-
 .container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
-  width: 400px; /* Širina kontejnera */
-  margin-top: 0px;
+  width: 400px;
 }
 
 input[type=text], input[type=password] {
-  width: calc(111% - 40px); /* Širina će biti 100% minus 40 piksela paddinga sa svake strane */
+  width: calc(111% - 40px);
   padding: 12px 20px;
   margin: 8px 0;
   border: 1px solid #ccc;
@@ -36,22 +30,14 @@ button:hover {
 }
 
 .imgcontainer {
-  text-align: left; /* Postavljanje teksta ulevo */
+  text-align: left;
   margin: -90px 0 12px 0;
   position: relative;
-  display: flex; /* Koristi flexbox */
-  justify-content: flex-start; /* Poravnavanje sadržaja na lijevu stranu */
+  display: flex;
+  justify-content: flex-start;
 }
 
 img.avatar {
   width: 100%;
   border-radius: 50%;
 }
-
-.psw {
-  display: block;
-  text-align: center; /* Postavljanje teksta u centar */
-  margin-left: 5px; /* Negativna margina za pomjeranje nalevo (opciono) */
-}
-
-
