--- a/selling-used-items-app-frontend/src/app/common/profile/profile.component.css
+++ b/selling-used-items-app-frontend/src/app/common/profile/profile.component.css
@@ -1,42 +1,19 @@
-.editProfileForm {
-    background-color: #f2f2f2;
-    padding: 20px;
-    border-radius: 5px;
-    width: 250px; /* Smanjena širina forme */
-    margin: 20px auto 0; /* Spuštanje forme nadole za 20px */
-}
-
-.editProfileForm h2 {
+.status-bar {
+    background-color: #333;
+    padding: 10px;
     text-align: center;
-    margin-bottom: 10px; /* Smanjen razmak ispod naslova */
 }
 
-.editProfileForm form {
-    display: grid;
-    gap: 8px; /* Smanjen razmak između labela i input polja */
-}
-
-.editProfileForm label {
-    font-weight: bold;
-}
-
-.editProfileForm input[type="text"],
-.editProfileForm input[type="email"],
-.editProfileForm input[type="password"] {
-    width: 95%; /* Popunjavanje širine roditeljskog elementa */
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.editProfileForm input[type="submit"] {
-    background-color: #04AA6D;
+.status-option {
     color: white;
-    border: none;
+    text-decoration: none;
+    padding: 8px 16px;
+    margin: 0 10px;
     border-radius: 5px;
-    padding: 10px 30px; /* Manja visina, ali dužina ostaje ista */
-    cursor: pointer;
-    margin: 0 auto; /* Centriranje dugmeta */
-    display: block; /* Da bi se dugme centriralo */
-    width: 250px;
+    border: 1px solid transparent;
+}
+
+.status-option:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-color: white;
 }
