--- a/selling-used-items-app-frontend/src/app/common/profile/profile.component.html
+++ b/selling-used-items-app-frontend/src/app/common/profile/profile.component.html
@@ -1,24 +1,5 @@
-<div class="editProfileForm">
-    <h2>Edit Profile</h2>
-    <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" value="Marko" required>
-
-        <label for="lastname">Lastname:</label>
-        <input type="text" id="lastname" name="lastname" value="Cvijetic" required>
-
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" value="Markan" required>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" value="marko@gmail.com" disabled>
-
-        <label for="role">Role:</label>
-        <input type="text" id="role" name="role" value="Administrator" disabled>
-
-        <label for="changePassword">Change password:</label>
-        <input type="password" id="changePassword" name="changePassword" (input)=" redirectToChangePassword()" value="****************">
-
-        <input type="submit" value="Submit">
-    </form>
+<div class="status-bar">
+    <a href="/home/profile/edit-profile" class="status-option">Edit Profile</a>
+    <a href="#" class="status-option">My Advertisement</a>
 </div>
+<router-outlet></router-outlet>
