--- a/selling-used-items-app-frontend/src/app/common/profile/profile.component.html
+++ b/selling-used-items-app-frontend/src/app/common/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="status-bar">
     <a href="/home/profile/edit-profile" class="status-option">Edit Profile</a>
-    <a href="#" class="status-option">My Advertisement</a>
+    <a href="/home/profile/my-advertisement" class="status-option">My Advertisement</a>
 </div>
 <router-outlet></router-outlet>
