--- a/selling-used-items-app-frontend/src/app/forgot-password/forgot-password.component.html
+++ b/selling-used-items-app-frontend/src/app/forgot-password/forgot-password.component.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="forgot-password.component.css">
-</head>
-<body>
-
 <div class="container">
+  <div class="imgcontainer">
+    <img src="assets/logo1.png" class="avatar">
+  </div>
+
   <form action="/forgot_password.php" method="post">
-    <div class="imgcontainer">
-      <img src="assets/logo1.png" class="avatar">
+    <div class="form-group">
+      <label for="email"><b>Email</b></label>
+      <input type="email" placeholder="Enter Email" name="email" required>
     </div>
-
-    <label for="email"><b>Email</b></label>
-    <input type="email" placeholder="Enter Email" name="email" required>
-
     <button type="submit">Submit</button>
   </form>
-</div>
 
-</body>
-</html>
+  <button type="button" class="back-button" (click)="navigateToLogin()">Back</button>
+</div>
