--- a/selling-used-items-app-frontend/src/app/forgot-password/forgot-password.component.css
+++ b/selling-used-items-app-frontend/src/app/forgot-password/forgot-password.component.css
@@ -1,48 +1,59 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-  }
-  
-  .container {
-    text-align: center;
-    width: 400px; /* Širina kontejnera */
-  }
-  
-  input[type=email] {
-    width: calc(100% - 40px); /* Širina će biti 100% minus 40 piksela paddinga sa svake strane */
-    padding: 12px 20px;
-    margin: 8px 0;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-  }
-  
-  button {
-    background-color: #04AA6D;
-    color: white;
-    padding: 10px 15px; /* Smanjite vrijednosti za padding */
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 360px; /* Promijenite širinu gumba na auto kako bi se prilagodio sadržaju */
-    font-size: 14px; /* Promijenite veličinu fonta */
-  }
-  
-  
-  button:hover {
-    opacity: 0.8;
-  }
-  
-  .imgcontainer {
-    text-align: center; /* Postavljanje teksta u centar */
-    margin-bottom: 20px; /* Dodavanje margine na dno */
-  }
-  
-  img.avatar {
-    width: 400px; /* Prilagodite veličinu slike po potrebi */
-    border-radius: 50%;
-  }
-  
+.container {
+  display: flex;
+  flex-direction: column; /* Postavljanje na kolonu kako bi se elementi postavili jedan ispod drugog */
+  align-items: center;
+  height: 100vh;
+}
+
+.container .imgcontainer {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.container form {
+  text-align: center;
+  width: 400px; /* Širina forme */
+}
+
+.container form .form-group {
+  margin-bottom: 15px;
+}
+
+input[type=email] {
+  width: calc(100% - 40px); /* Širina će biti 100% minus 40 piksela paddinga sa svake strane */
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 10px 15px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 360px;
+  font-size: 14px;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.back-button {
+  background-color: #FF0000;
+  color: white;
+  padding: 10px 15px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.back-button:hover {
+  background-color: #CC0000;
+}
+
