Implemented create advertisement

--- a/selling-used-items-app-frontend/src/app/home/home.component.html
+++ b/selling-used-items-app-frontend/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <span class="searchIcon"></span>
     </div>
     <div class="addAdvertisement">
-        <button>
+        <button (click)="navigateToCreateAdvertisement()">
             <span class="icon">+</span> Add Advertisement
         </button>
     </div>
