--- a/selling-used-items-app-frontend/src/app/login/login.component.html
+++ b/selling-used-items-app-frontend/src/app/login/login.component.html
@@ -10,8 +10,10 @@
   <input type="password" placeholder="Enter Password" name="psw">
   <button type="button" (click)="navigateToProfile()">Login</button>
   <input type="checkbox" checked="checked" name="remember"> Remember me
-  
   <div>
     <span class="psw"><a [routerLink]="['/forgot-password']">Forgot password?</a></span>
+  </div>
+  <div>
+    <span class="psw"><a [routerLink]="['/register']">Don't have account?</a></span>
   </div>
 </div>
