--- a/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.html
+++ b/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.html
@@ -12,5 +12,5 @@
 
         <input type="submit" value="Submit">
     </form>
-    <button routerLink="/home/profile">Go Back</button>
+    <button routerLink="/home/profile/edit-profile">Go Back</button>
 </div>
