--- a/selling-used-items-app-frontend/src/app/common/my-advertisement/my-advertisement.component.html
+++ b/selling-used-items-app-frontend/src/app/common/my-advertisement/my-advertisement.component.html
@@ -17,12 +17,17 @@
                 <td>{{ ad.description }}</td>
                 <td>{{ ad.status }}</td>
                 <td>
-                    <button *ngIf="ad.status === 'Available'" class="edit-button">Edit</button>
+                    <button *ngIf="ad.status === 'Available'" class="edit-button" (click)="navigateToAdvertisements()">Edit</button>
                 </td>
                 <td>
                     <button *ngIf="ad.status === 'Available'" class="delete-button">Delete</button>
                 </td>
             </tr>
-        </tbody>
+        </tbody> 
     </table>
+    <div class="pagination">
+        <button class="pagination-button">
+            <div class="pagination-content">1</div>
+        </button>
+    </div> 
 </div>
