--- a/selling-used-items-app-frontend/src/app/common/profile/profile.component.html
+++ b/selling-used-items-app-frontend/src/app/common/profile/profile.component.html
@@ -1,5 +1,6 @@
 <div class="status-bar">
     <a href="/home/profile/edit-profile" class="status-option">Edit Profile</a>
     <a href="/home/profile/my-advertisements" class="status-option">My Advertisement</a>
+    <a href="" class="status-option">My Purchases</a>
 </div>
 <router-outlet></router-outlet>
