--- a/selling-used-items-app-frontend/src/app/common/all-advertisements/all-advertisements.component.css
+++ b/selling-used-items-app-frontend/src/app/common/all-advertisements/all-advertisements.component.css
@@ -94,15 +94,43 @@
 }
 
 .view-button {
-    background-color: #007bff; /* Plava boja */
+    background-color: #28a745; /* Zelena boja */
     color: white;
     border: none;
     padding: 8px 16px;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.view-button:hover {
+    background-color: #218838; /* Tamnija nijansa zelene boje kada je dugme hoverovano */
+}
+
+.delete-button {
+    background-color: #FF5733; /* Crvena boja */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 16px;
+    cursor: pointer;
+}
+
+.pagination {
+    text-align: center;
   }
   
-  .view-button:hover {
-    background-color: #0056b3; /* Tamnija nijansa plave boje kada je dugme hoverovano */
+  .pagination-button {
+    background-color: gray;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    margin: 0 5px;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-left: 700px;
+  }
+  
+  .pagination-button:hover {
+    background-color: #0056b3;
   }
   
