--- a/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.css
+++ b/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.css
@@ -50,3 +50,18 @@
     display: block; /* Da bi se dugme centriralo */
     width: 250px;
 }
+
+.changePasswordForm button {
+    background-color: #FF0000; /* Crvena boja pozadine */
+    color: white; /* Bela boja teksta */
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+  }
+  
+  .changePasswordForm button:hover {
+    background-color: #CC0000; /* Tamnocrvena boja pozadine na hover */
+  }
+  
