--- a/selling-used-items-app-frontend/src/app/home/home.component.html
+++ b/selling-used-items-app-frontend/src/app/home/home.component.html
@@ -10,12 +10,19 @@
         </button>
     </div>
     <div>
+        <button class="home" (click)="navigateToHome()">
+            <span class="homeIcon"></span>
+        </button>
         <button class="logout" (click)="navigateToLogin()">
             <span class="logoutIcon"></span>
         </button>
         <button class="profile" (click)="navigateToProfile()">
             <span class="profileIcon"></span>
         </button>
+        <button class="reportUser" (click)="navigateToReportUser()">
+            <span class="reportUserIcon"></span>
+        </button>
     </div>
 </div>
+
 <router-outlet></router-outlet>
