--- a/selling-used-items-app-frontend/src/app/home/home.component.html
+++ b/selling-used-items-app-frontend/src/app/home/home.component.html
@@ -22,6 +22,9 @@
         <button class="reportUser" (click)="navigateToReportUser()">
             <span class="reportUserIcon"></span>
         </button>
+        <button class="rateUser">
+            <span class="rateUserIcon" (click)="navigateToRateUser()"></span>
+        </button>
     </div>
 </div>
 
