Implement accept and decline comments

--- a/selling-used-items-app-frontend/src/app/home/home.component.html
+++ b/selling-used-items-app-frontend/src/app/home/home.component.html
@@ -25,6 +25,9 @@
         <button class="rateUser">
             <span class="rateUserIcon" (click)="navigateToRateUser()"></span>
         </button>
+        <button class="approveComment">
+            <span class="approveCommentIcon" (click)="navigateToComments()"></span>
+        </button>
     </div>
 </div>
 
