--- a/selling-used-items-app-frontend/src/app/home/home.component.css
+++ b/selling-used-items-app-frontend/src/app/home/home.component.css
@@ -142,20 +142,49 @@ background-size: contain;
 }
 
 .rateUser {
-    position: absolute;
-    left: 1550px; 
-    top: 50%;
-    transform: translateY(-50%);
-    width: 40px;
-    height: 25px;
-    background: url('../../assets/rating.png') no-repeat center; 
-    background-size: contain;
-    border: none;
-    cursor: pointer;
+position: absolute;
+left: 1550px; /* Pomeramo dugme "reportUser" za 45px (širina dugmeta "profile" + 35px razmaka) */
+top: 50%;
+transform: translateY(-50%);
+width: 40px;
+height: 25px;
+background: url('../../assets/rating.png') no-repeat center; /* Dodaj putanju do ikonice za "reportUser" */
+background-size: contain;
+border: none;
+cursor: pointer;
 }
 
 .rateUserIcon {
-    width: 20px; /* Podesi širinu ikonice */
-    height: 20px; /* Podesi visinu ikonice */
-    background-size: contain;
+width: 20px; /* Podesi širinu ikonice */
+height: 20px; /* Podesi visinu ikonice */
+background-size: contain;
 }
+
+
+.reportUserIcon {
+width: 20px; /* Podesi širinu ikonice */
+height: 20px; /* Podesi visinu ikonice */
+background-size: contain;
+}
+
+.approveComment {
+position: absolute;
+left: 1515px; /* Pomeramo dugme "reportUser" za 45px (širina dugmeta "profile" + 35px razmaka) */
+top: 50%;
+transform: translateY(-50%);
+width: 40px;
+height: 25px;
+background: url('../../assets/comment.png') no-repeat center; /* Dodaj putanju do ikonice za "reportUser" */
+background-size: contain;
+border: none;
+cursor: pointer;
+}
+
+.approveCommentIcon {
+width: 20px; /* Podesi širinu ikonice */
+height: 20px; /* Podesi visinu ikonice */
+background-size: contain;
+}
+
+
+
