--- a/selling-used-items-app-frontend/src/app/common/all-advertisements/all-advertisements.component.css
+++ b/selling-used-items-app-frontend/src/app/common/all-advertisements/all-advertisements.component.css
@@ -1,136 +1,141 @@
 .container {
-    display: flex;
-    justify-content: center; /* Promenjeno na centriranje */
-    align-items: flex-start; /* Promenjeno na flex-start */
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 100%; /* Puni ekran */
+display: flex;
+justify-content: center; /* Promenjeno na centriranje */
+align-items: flex-start; /* Promenjeno na flex-start */
+flex-direction: column;
+flex-wrap: wrap;
+width: 100%; /* Puni ekran */
 }
 
 .searchInput,
 .sortContainer,
 .priceRangeContainer,
 .alphabetContainer {
-    width: 100%;
-    margin-bottom: 10px;
+width: 100%;
+margin-bottom: 10px;
 }
 
 .searchInput {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-repeat: no-repeat;
-    background-position: right 10px center;
-    margin-bottom: 10px;
-    margin-top: 5px;
+padding: 10px;
+border: 1px solid #ccc;
+border-radius: 5px;
+background-repeat: no-repeat;
+background-position: right 10px center;
+margin-bottom: 10px;
+margin-top: 5px;
 }
 
 .sortSelect {
-    padding: 9.5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+padding: 9.5px;
+border: 1px solid #ccc;
+border-radius: 5px;
 }
 
 .priceRange {
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-top: 10px;
+padding: 5px;
+border: 1px solid #ccc;
+border-radius: 5px;
+margin-top: 10px;
 }
 
 .priceInput {
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-right: 5px;
-    width: 100px;
+padding: 5px;
+border: 1px solid #ccc;
+border-radius: 5px;
+margin-right: 5px;
+width: 100px;
 }
 
 #applyPrice {
-    padding: 5px 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+padding: 5px 10px;
+background-color: #4CAF50;
+color: white;
+border: none;
+border-radius: 5px;
+cursor: pointer;
 }
 
 .advertisementTable {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
+width: 100%;
+border-collapse: collapse;
+margin-top: 20px;
 }
 
 .advertisementTable th,
 .advertisementTable td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
+border: 1px solid #ddd;
+padding: 8px;
+text-align: left;
 }
 
 .advertisementTable th {
-    background-color: #f2f2f2;
+background-color: #f2f2f2;
 }
 
 .advertisementTable tbody tr:nth-child(even) {
-    background-color: #f2f2f2;
+background-color: #f2f2f2;
 }
 
 .alphabetContainer {
-    display: flex;
-    justify-content: space-between; /* Ravnomerno raspoređivanje elemenata */
-    align-items: center;
-    background-color: #f2f2f2;
-    padding: 10px;
-    border-radius: 5px;
-    width: 99%; /* Puni ekran */
+display: flex;
+justify-content: space-between; /* Ravnomerno raspoređivanje elemenata */
+align-items: center;
+background-color: #f2f2f2;
+padding: 10px;
+border-radius: 5px;
+width: 99%; /* Puni ekran */
 }
 
 .alphabetFilter {
-    padding: 5px 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer;
+padding: 5px 10px;
+border: 1px solid #ccc;
+border-radius: 5px;
+cursor: pointer;
 }
 
 .view-button {
-    background-color: #28a745; /* Zelena boja */
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
+background-color: #28a745; /* Zelena boja */
+color: white;
+border: none;
+padding: 8px 16px;
+border-radius: 4px;
+cursor: pointer;
 }
 
 .view-button:hover {
-    background-color: #218838; /* Tamnija nijansa zelene boje kada je dugme hoverovano */
+background-color: #218838; /* Tamnija nijansa zelene boje kada je dugme hoverovano */
 }
 
 .delete-button {
-    background-color: #FF5733; /* Crvena boja */
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 16px;
-    cursor: pointer;
+background-color: #FF5733; /* Crvena boja */
+color: white;
+border: none;
+border-radius: 5px;
+padding: 8px 16px;
+cursor: pointer;
 }
 
 .pagination {
-    text-align: center;
-  }
-  
-  .pagination-button {
-    background-color: gray;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    margin: 0 5px;
-    border-radius: 3px;
-    cursor: pointer;
-    margin-left: 700px;
-  }
-  
-  .pagination-button:hover {
-    background-color: #0056b3;
-  }
-  
+text-align: center;
+}
+
+.pagination-button {
+background-color: gray;
+color: white;
+border: none;
+padding: 5px 10px;
+margin: 0 5px;
+border-radius: 3px;
+cursor: pointer;
+margin-left: 700px;
+}
+
+.pagination-button:hover {
+background-color: #0056b3;
+}
+
+
+.selected {
+background-color: #007bff; 
+color: white;
+}
