Implemented forgot password

--- a/selling-used-items-app-frontend/src/app/forgot-password/forgot-password.component.html
+++ b/selling-used-items-app-frontend/src/app/forgot-password/forgot-password.component.html
@@ -5,10 +5,9 @@
 
   <form action="/forgot_password.php" method="post">
     <div class="form-group">
-      <label for="email"><b>Email</b></label>
-      <input type="email" placeholder="Enter Email" name="email" required>
+      <input type="email" placeholder="Enter Email" [(ngModel)]="email" name="email" required>
     </div>
-    <button type="submit">Submit</button>
+    <button type="button" (click)="forgotPassword()">Submit</button>
   </form>
 
   <button type="button" class="back-button" (click)="navigateToLogin()">Back</button>
