Implemented change password

--- a/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.css
+++ b/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.css
@@ -1,67 +1,63 @@
 .changePasswordForm {
-    background-color: #f2f2f2;
-    padding: 20px;
-    border-radius: 5px;
-    width: 250px; /* Smanjena širina forme */
-    margin: 20px auto 0; /* Spuštanje forme nadole za 20px */
+background-color: #f2f2f2;
+padding: 20px;
+border-radius: 5px;
+width: 250px; /* Smanjena širina forme */
+margin: 20px auto 0; /* Spuštanje forme nadole za 20px */
 }
 
 .changePasswordForm h2 {
-    text-align: center;
-    margin-bottom: 10px; /* Smanjen razmak ispod naslova */
+text-align: center;
+margin-bottom: 10px; /* Smanjen razmak ispod naslova */
 }
 
 .changePasswordForm form {
-    display: grid;
-    gap: 8px; /* Smanjen razmak između labela i input polja */
+display: grid;
+gap: 8px; /* Smanjen razmak između labela i input polja */
 }
 
 .changePasswordForm label {
-    font-weight: bold;
+font-weight: bold;
 }
 
 .changePasswordForm input[type="password"] {
-    width: 95%; /* Popunjavanje širine roditeljskog elementa */
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+width: 95%; /* Popunjavanje širine roditeljskog elementa */
+padding: 8px;
+border: 1px solid #ccc;
+border-radius: 5px;
 }
 
-.changePasswordForm input[type="submit"] {
-    background-color: #04AA6D;
+.changePasswordForm button.greenButton {
+    background-color: #4CAF50; /* Zelena boja */
     color: white;
     border: none;
     border-radius: 5px;
     padding: 10px 30px; /* Manja visina, ali dužina ostaje ista */
     cursor: pointer;
-    margin: 0 auto; /* Centriranje dugmeta */
+    margin: 20px auto 10px; /* Spuštanje dugmeta za 10px */
     display: block; /* Da bi se dugme centriralo */
     width: 250px;
 }
 
+
 .changePasswordForm button {
-    background-color: #04AA6D;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 30px; /* Manja visina, ali dužina ostaje ista */
-    cursor: pointer;
-    margin: 20px auto 0; /* Spuštanje dugmeta nadole za 20px */
-    display: block; /* Da bi se dugme centriralo */
-    width: 250px;
+background-color: #04AA6D;
+color: white;
+border: none;
+border-radius: 5px;
+padding: 10px 30px; /* Manja visina, ali dužina ostaje ista */
+cursor: pointer;
+margin: 20px auto 0; /* Spuštanje dugmeta nadole za 20px */
+display: block; /* Da bi se dugme centriralo */
+width: 250px;
 }
 
 .changePasswordForm button {
-    background-color: #FF0000; /* Crvena boja pozadine */
-    color: white; /* Bela boja teksta */
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-  }
-  
-  .changePasswordForm button:hover {
-    background-color: #CC0000; /* Tamnocrvena boja pozadine na hover */
-  }
-  
+background-color: #FF0000; /* Crvena boja pozadine */
+color: white; /* Bela boja teksta */
+padding: 10px 15px;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+text-decoration: none;
+}
