--- a/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.html
+++ b/selling-used-items-app-frontend/src/app/common/change-password/change-password.component.html
@@ -1,16 +1,12 @@
 <div class="changePasswordForm">
     <h2>Change Password</h2>
     <form>
-        <label for="oldPassword">Old Password:</label>
-        <input type="password" id="oldPassword" name="oldPassword" required>
-
         <label for="newPassword">New Password:</label>
-        <input type="password" id="newPassword" name="newPassword" required>
+        <input type="password" [(ngModel)]="newPassword" id="newPassword" name="newPassword" required>
 
         <label for="confirmPassword">Confirm New Password:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" required>
-
-        <input type="submit" value="Submit">
+        <input type="password" [(ngModel)]="confirmNewPassword" id="confirmPassword" name="confirmPassword" required>
     </form>
+    <button class="greenButton" type="submit" (click)="editProfile()">Submit</button>
     <button routerLink="/home/profile/edit-profile">Go Back</button>
 </div>
