--- a/selling-used-items-app-frontend/src/app/common/edit-profile/edit-profile.component.css
+++ b/selling-used-items-app-frontend/src/app/common/edit-profile/edit-profile.component.css
@@ -40,3 +40,12 @@
     display: block; /* Da bi se dugme centriralo */
     width: 250px;
 }
+
+.greenButton {
+    background-color: #4CAF50; /* Zelena boja */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
