--- a/selling-used-items-app-frontend/src/app/common/edit-profile/edit-profile.component.html
+++ b/selling-used-items-app-frontend/src/app/common/edit-profile/edit-profile.component.html
@@ -2,23 +2,19 @@
     <h2>Edit Profile</h2>
     <form>
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" value="Marko" required>
+        <input type="text" id="name" name="name" [(ngModel)]="user.name" required>
 
         <label for="lastname">Lastname:</label>
-        <input type="text" id="lastname" name="lastname" value="Cvijetic" required>
+        <input type="text" id="lastname" name="lastname" [(ngModel)]="user.lastName" required>
 
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" value="Markan" required>
+        <input type="text" id="username" name="username" [(ngModel)]="user.username" required>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" value="marko@gmail.com" disabled>
-
-        <label for="role">Role:</label>
-        <input type="text" id="role" name="role" value="Administrator" disabled>
+        <input type="email" id="email" name="email" [(ngModel)]="user.email" disabled>
 
         <label for="changePassword">Change password:</label>
-        <input type="password" id="changePassword" name="changePassword" (input)=" redirectToChangePassword()" value="****************">
-
-        <input type="submit" value="Submit">
+        <input type="password" id="changePassword" name="changePassword" (input)="redirectToChangePassword()" value="****************">
+        <button type="button" class="greenButton" (click)="editProfile()">Submit</button>
     </form>
 </div>
