--- a/selling-used-items-app-frontend/src/app/common/all-advertisements/all-advertisements.component.html
+++ b/selling-used-items-app-frontend/src/app/common/all-advertisements/all-advertisements.component.html
@@ -41,12 +41,12 @@
     </div>
     <table id="advertisementTable" class="advertisementTable">
         <tbody>
-          <tr *ngFor="let ad of advertisements" (click)="navigateToAdvertisementDisplay()">
+          <tr *ngFor="let ad of advertisements">
             <td>{{ ad.name }}</td>
             <td>{{ ad.price }}</td>
             <td>{{ ad.description }}</td>
             <td><button class="view-button" (click)="navigateToAdvertisementDisplay()">View</button></td>
-            <td><button class="delete-button">Delete</button></td>
+            <td><button class="delete-button" (click)="deleteAdvertisement(ad.id)">Delete</button></td>
           </tr>
         </tbody>
       </table>  
